--- a/Chat/rt_chat/templates/rt_chat/chat.html
+++ b/Chat/rt_chat/templates/rt_chat/chat.html
@@ -17,10 +17,10 @@
   <div class='sticky bottom-0 z-10 p-2 bg-gray-800'>
     <div class="flex items-center rounded-xl px-2 py-2">
       <form id="chat_messages_form" class="w-full"
-      hx-post="{% url 'home'%}"
-      hx-target="#chat_messages"
-      hx-swap="beforeend"
-      _="on htmx:afterRequest reset() me"
+   hx-ext="ws"
+   ws-connect="/ws/chatroom/All-Chat"
+   ws-send
+      _="on htmx:wsAfterSend reset() me"
       >
         {% comment %} <input type="text" name="message" placeholder="Add message..." maxlength="200"> {% endcomment %}
         {% csrf_token %}
